# mpt

./: pyproject.toml
mpt/: single_sums.py
mpt/tests/: test_sums.py
