[tool.poetry]
name = "mpt"
version = "0.1.0"
description = ""
authors = ["Larry Johnson <larry.johnson@fintorian>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
